...
        >
          <View style={styles.buttonContainer}>
            <Login />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              testID="sendInAppBtn"
              title="Send In-App"
              onPress={() => {
                RNE2E.sendCommand('send-in-app', {
                  campaignId: sendInAppCampaignId,
                });
              }}
...
